--- a/interface/chatbot.html
+++ b/interface/chatbot.html
@@ -21,26 +21,26 @@
         flex-direction: row;
         justify-content: space-between;
         padding: 2%;
-        overflow: hidden; /* Empêche le débordement */
+        overflow: hidden;
       }
       #chatbox {
         background-color: #fff;
-        flex: 70%; /* Utilisation de % pour largeur */
+        flex: 70%;
         overflow-y: auto;
         padding: 3%;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         border-radius: 8px;
-        height: calc(100% - 10%); /* Ajuste la hauteur */
+        height: calc(100% - 10%);
         margin-bottom: 1%;
       }
       #recommended-guides {
         background-color: #fff;
-        flex: 30%; /* Utilisation de % pour largeur */
+        flex: 30%;
         margin-left: 1%;
         padding: 3%;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         border-radius: 8px;
-        height: calc(100% - 10%); /* Ajuste la hauteur */
+        height: calc(100% - 10%);
         overflow-y: auto;
         margin-bottom: 1%;
       }
@@ -55,13 +55,13 @@
         align-self: flex-end;
       }
       .bot-message {
-        background-color: #e2e3e5; /* Couleur douce pour la réponse du bot */
+        background-color: #e2e3e5;
         align-self: flex-start;
       }
       #input-container {
         display: flex;
-        justify-content: space-between; /* Aligne les éléments */
-        align-items: center; /* Centre les éléments verticalement */
+        justify-content: space-between;
+        align-items: center;
         margin: 2%;
         padding: 0 2%;
         background-color: #fff;
@@ -72,22 +72,22 @@
         padding-top: 1%;
       }
       #userInput {
-        flex: 80%; /* Utilisation de % pour largeur */
+        flex: 80%;
         padding: 2%;
         border: 1px solid #ccc;
         border-radius: 5px;
         margin-right: 2%;
-        height: 10px; /* Assurez-vous que l'input ait une hauteur spécifique */
+        height: 10px;
       }
       #sendButton {
-        flex: 20%; /* Utilisation de % pour largeur */
+        flex: 20%;
         padding: 2%;
         background-color: #007bff;
         color: white;
         border: none;
         border-radius: 5px;
         cursor: pointer;
-        height: 40px; /* Même hauteur que l'input pour alignement */
+        height: 40px;
       }
       #sendButton:hover {
         background-color: #0056b3;
@@ -107,7 +107,7 @@
           flex-direction: column;
         }
         #userInput {
-          margin-bottom: 10px; /* Ajout d'un espacement entre l'input et le bouton */
+          margin-bottom: 10px;
         }
       }
     </style>
@@ -191,24 +191,49 @@
               .then((data) => {
                 const guideList = document.createElement("div");
                 guideList.className = "message bot-message";
+                recommendedGuides.innerHTML = "";
                 if (data.response.recommended_guides.length !== 0) {
                   guideList.innerHTML = `
-<strong>Guides recommandés :</strong>
-  <ul>
-    ${data.response.recommended_guides
-      .map(
-        (guide) => `
-      <li>
-        <strong>${guide.title}</strong><br>
-        <em>${guide.category}</em><br>
-        <p>${guide.summary}</p><br>
-        <a href="${guide.url}" target="_blank">Voir le guide complet</a>
-      </li>
-    `
-      )
-      .join("")}
-  </ul>
-`;
+        <strong>Guides recommandés :</strong>
+        <ul>
+          ${data.response.recommended_guides
+            .map(
+              (guide) => `
+            <li>
+              <strong>${guide.title}</strong><br>
+              <em>${guide.category}</em><br>
+              <p>${guide.summary}</p><br>
+              <a href="${guide.url}" target="_blank">Voir le guide complet</a>
+            </li>
+          `
+            )
+            .join("")}
+        </ul>
+      `;
+
+                  guideList.innerHTML += `
+        <strong>Vidéos recommandées :</strong>
+        <ul>
+          ${data.response.ytb_videos
+            .map((videoArray) => {
+              return videoArray
+                .map(
+                  (video) => `
+                  <li>
+                    <strong>${video.title}</strong><br>
+                    <em>${video.channel_title}</em><br>
+                    <!-- <p>${video.description}</p><br> -->
+                    <img src="${video.thumbnail_url}" alt="Thumbnail of ${video.title}" /><br>
+                    <a href="${video.url}" target="_blank">Voir la vidéo</a>
+                  </li>
+                `
+                )
+                .join(""); // Joindre les vidéos dans le tableau
+            })
+            .join("")} <!-- Joindre tous les tableaux de vidéos -->
+        </ul>
+      `;
+
                   recommendedGuides.innerHTML = "";
                   recommendedGuides.appendChild(guideList);
                   recommendedGuides.scrollTop = recommendedGuides.scrollHeight;
